Changelog
=========

1.8 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

* Added support of a custom `edit_handler` in site settings (Axel Haustant)


1.7 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Elasticsearch 2 support (Karl Hobley)
 * Added parameters to image tag to specify file type and JPEG compression level (Karl Hobley)
 * Added support for AWS CloudFront in frontend cache invalidation module (Rob Moorman)
 * Unpublishing a page now gives the option to unpublish subpages too (Jordi Joan)
 * The ``|embed`` filter has been converted into a templatetag ``{% embed %}`` (Janneke Janssen)
 * The `wagtailforms` module now provides a `FormSubmissionPanel` for displaying details of form submissions (João Luiz Lorencetti)
 * The Wagtail version number can now be obtained as a tuple using `from wagtail import VERSION` (Tim Heap)
 * `send_mail` logic has been moved from `AbstractEmailForm.process_form_submission` into `AbstractEmailForm.send_mail`. Now it's easier to override this logic (Tim Leguijt)
 * Added `before_create_page`, `before_edit_page`, `before_delete_page` hooks (Karl Hobley)
 * Updated font sizes and colours to improve legibility of admin menu and buttons (Stein Strindhaug)
 * Added pagination to "choose destination" view when moving pages (Nick Smith, Žan Anderle)
 * Added ability to annotate search results with score (Karl Hobley)
 * Added ability to limit access to form submissions (Mikalai Radchuk)
 * Added the ability to configure the number of days search logs are kept for (Stephen Rice)
 * `SnippetChooserBlock` now supports passing the model name as a string (Nick Smith)
 * Redesigned account settings / logout area in the sidebar for better clarity (Janneke Janssen)
 * Pillow's image optimisation is now applied when saving JPEG images (Karl Hobley)
 * Fix: Migrations for wagtailcore and project template are now reversible (Benjamin Bach)